--- a/index.html
+++ b/index.html
@@ -106,19 +106,36 @@
         <div class="column-left">
           <h1>Drone Operations Compliance <br />& Fleet Management Made Easy</h1>
           <h2 class="sub-header">
-            Simplify your drone operations via DroneLogbook’s comprehensive platform. Our platform manages personnel currency, provides fleet management, helps you plan and document missions and flights.
-            <br /><br />We integrate 80+ telemetry (flight log) types to maintain detailed, accurate data on every aspect of your drone operations.
+            DroneLogbook brings all your drone-operations workflows into a single,
+            powerful, scalable platform. Easily track personal currency, 
+            manage UAV fleets, and plan, execute, and document missions with consistent accuracy and control.
+            <br /><br />With support for <b>80+ flight-log and telemetry formats</b>, 
+            the platform gives you reliable, detailed visibility into every
+            flight and every aircraft in your operation.
           </h2>
-          <div class="laptop-list">
-            <div class="item">Mission Planning</div>
-            <div class="item">Compliance Reporting</div>
-            <div class="item">Maintenance Reporting</div>
-            <div class="item">Flight Tracking</div>
-            <div class="item">Custom Digital Forms</div>
-            <div class="item">Offline Operations</div>
-            <div class="item">Fleet Management</div>
-            <div class="item">Personnel Tracking</div>
-            <div class="item">Scheduled Inspections</div>
+          <p style="color: #fff; font-size: 2.5em;"><b>Platform Features:</b></p>
+          <div class="features-list-wrapper">
+            <div class="feature-col">
+              <ul>
+                <li>Mission Planning</li>
+                <li>Flight Tracking</li>
+                <li>Fleet Management</li>
+              </ul>
+            </div>
+            <div class="feature-col">
+              <ul>
+                <li>Compliance Reporting</li>
+                <li>Custom Digital Forms</li>
+                <li>Personnel Tracking</li>
+              </ul>
+            </div>
+            <div class="feature-col">
+              <ul>
+                <li>Maintenance Reporting</li>
+                <li>Offline Operations</li>
+                <li>Scheduled Inspections</li>
+              </ul>
+            </div>
           </div>
           <ul class="ui-buttons">
             <a href="pricing.php" class="ui-black">Sign Up</a>
@@ -139,24 +156,33 @@
       <div class="content-container">
         <div class="column-left">
           <div class="content-header">Solutions for Every Industry</div>
-          <div class="content-sub-header">We offer tailored versions of DroneLogbook to meet the needs of different types of drone operations. Scaleable, modular and configurable platforms to meet the needs of the commercial UAV industry.</div>
+          <div class="content-sub-header">DroneLogbook delivers industry-specific solution that adapt to the unique requirement of commercial UAV operations.
+            Our platform is  scalable, modular, and configrable-ideal for organizations that need flexible and reliable drone-operations sloftware.
+          </div>
           <div class="ui-buttons">
-            <a href="solutions.html" class="ui-black">Explore our solutions</a>
+            <a href="solutions.html" class="ui-black"><b>Explore our solutions</b></a>
           </div>
         </div>
 
         <div class="column-right">
           <div class="feature">
             <div class="feature-header">Log Flight Details & Documentation</div>
-            <div class="feature-sub-header">Import flight logs to auto fill flight data, view GPS trace and play back in 3D.</div>
+            <div class="feature-sub-header">Seamlessly import flight logs, 
+              automatically populate mission data, analyze GPS routes, 
+              and access 3D flight playback. Keep all documentation organized and easily accessible for compliance and reporting needs.</div>
           </div>
           <div class="feature">
             <div class="feature-header">Manage Inspection and Maintenance</div>
-            <div class="feature-sub-header">Build custom inspection schedules and auto notify when next inspection or component replacements are due. Manage episodic maintenance events and synchronize with inspection calendar.</div>
+            <div class="feature-sub-header">Develop inspection schedules aligned with your operational 
+              requirements and receive alerts when inspections or component replacements 
+              are upcoming. Monitor all maintenance activities and maintain a synchronized inspection calendar.
+            </div>
           </div>
           <div class="feature">
             <div class="feature-header">Plan Missions</div>
-            <div class="feature-sub-header">Plan missions and check airspace. Send missions for approval and attach documentation for complete overview.</div>
+            <div class="feature-sub-header">Plan and manage missions efficiently—review airspace conditions, 
+              assign personnel and equipment, submit missions for approval, 
+              and attach required documents for full operational visibility.</div>
           </div>
         </div>
       </div>
@@ -168,10 +194,11 @@
           <div class="content-header">DLB for Public Safety</div>
           <div class="content-header"><img class="card-logo" src="img-min/solutions/safety.jpeg" alt="Public Safety Solution" style="width: inherit;"></div>
           <div class="feature-sub-header" style="color: #fff;">
-            This version of Dronelogbook is tailored to meet the technical needs and language of the public safety sector.
-            In addition, it is also priced to reflect the usage patterns and budget requirements of police, fire, EMS and
-            emergency planning departments. Our only requirement to use this site is you must use your official work emails
-            to sign up as it is meant just for 1st Responders.
+            DroneLogbook’s public safety edition is designed specifically for emergency services, 
+            offering features and terminology that align with the operational demands of police, fire, 
+            EMS, and emergency planning departments. 
+            The pricing model reflects typical mission profiles and budget considerations across the public safety community.
+            Access is restricted to first responders and requires registration with an authorized work email.
           </div>
           <div class="ui-buttons" style="justify-content: center; margin-top: 30px;">
             <a href="https://www.safetydrone.org" class="ui-black" style="background-color: #105ea2;">Explore Safety Solution</a>
@@ -182,8 +209,10 @@
           <div class="content-header">DLB for Agriculture</div>
           <div class="content-header"><img class="card-logo" src="img-min/solutions/agriculture.jpeg" alt="Agriculture Solution" style="width: inherit;"></div>
           <div class="feature-sub-header" style="color: #fff;">
-            DLB Ag Edition was developed with the FAA Part 137 UAV operator in mind and blends the power of DLB with the needs of the agricultural custom applicator.
-            DLB Ag Edition was developed with a specific workflow to ensure an accurate exchange of application information from the grower all the way to the Remote Pilot.
+            DLB Ag Edition delivers a dedicated workflow for agricultural drone operations, 
+            designed to meet the needs of spray missions, field applications, 
+            and precision-ag programs worldwide. By blending DroneLogbook’s comprehensive management platform with agriculture-focused tools, 
+            it enables precise communication and information flow between growers, agronomists, and the Remote Pilot in the field.
           </div>
           <div class="ui-buttons" style="justify-content: center; margin-top: 30px;">
             <a href="https://www.dronelogbook.ag" class="ui-black" style="background-color: #00a537;">Explore Agriculture Solution</a>
@@ -198,14 +227,21 @@
       <div class="row">
         <div class="page-wrapper">
           <div class="content-header">The DroneLogbook Advantage</div>
-          <div class="content-sub-header">DroneLogbook is the industry leader for automating importing flight logs. We support more file types than any other drone compliance software provider. Your UAV operations require a growing and diverse fleet to perform the expanding number of jobs being assigned. Your drone operations software needs to be able to scale and support the tools you use.</div>
+          <div class="content-sub-header">DroneLogbook sets the standard for automated flight-log processing, 
+            offering the broadest support for telemetry and file formats in the drone software industry. 
+            With UAV fleets becoming increasingly diverse and mission profiles more complex, 
+            you need an operations platform that adapts, scales, 
+            and integrates seamlessly with the tools you rely on.
+          </div>
           <div class="divider"></div>
 
           <div class="flex-container" style="justify-content: center;">
             <div class="module-text">
               <h3>Protecting your data is our priority</h3>
-              <p>We give you peace of mind with enterprise-level security to ensure your critical data is secure. Our organization and platform is SOC 2 compliant.
-                <br />Our cloud platform utilizes state-of-the-art security measures to safeguard your data, ensuring it remains protected from unauthorized access or data breaches.
+              <p>Security is built into every layer of DroneLogbook. Our SOC 2–compliant platform 
+                delivers enterprise-level protection and continuous safeguards for sensitive operational data.
+                <br />Using modern, cloud-based security protocols, we ensure your information remains 
+                secure, private, and shielded from unauthorized access.
               </p>
             </div>
             <div class="module-img">
@@ -220,11 +256,12 @@
             </div>
             <div class="module-text">
               <h3>Compliance & Custom Reporting</h3>
-              <p>The most important part of your commercial operations is making sure you stay compliant. DroneLogbook tracks
-                all your operations to allow you to create reports in seconds. Generate compliance (FAA, CAA, CASA, CAD,
-                EASA, DGAC, TBST) reports in seconds. Regulatory agencies require you to produce records on demand. In addition,
-                we have a series of custom reports available to allow you to track pilots, flights, maintenance and more.
-                <br><br> DroneLogbook makes it that easy.
+              <p>Compliance is a critical responsibility for commercial UAV programs. 
+                With DroneLogbook, every operation is logged, organized, and ready for audit—helping 
+                you generate regulatory reports instantly for authorities such as FAA (Part 108, Part 137), 
+                CAA, CASA, CAD, EASA, DGAC, TBST, and more. Our platform also offers extensive custom reporting tools, 
+                giving you clear insights into pilot activity, flight records, maintenance events, and overall operational performance.
+                <br><br><b>DroneLogbook makes it that easy.</b>
               </p>
             </div>
           </div>
@@ -232,10 +269,14 @@
           <div class="flex-container reversed">
             <div class="module-text">
               <h3>Documentation</h3>
-              <p>DroneLogbook provides a digital document library with custom checklists and risk assessment forms. In addition,
-                you can upload hard copies of other forms if needed.
-                <br><br> Create documentation electronically (Authorization Forms, POA, etc) Attach pre and post flight documentation
-                to flights. Track maintenance operations, authorize flights and more...
+              <p>With a built-in digital document library, DroneLogbook allows teams to 
+                manage custom checklists, risk assessments, and any additional 
+                uploaded forms. All documentation—digital or scanned—can be 
+                organized and stored centrally for quick access.
+                <br><br>Generate electronic documentation, including authorization forms and POAs, 
+                and link pre-flight and post-flight records directly to each mission. 
+                Easily track maintenance activity, approve operations, and maintain complete documentation 
+                for every UAV flight.
               </p>
             </div>
             <div class="module-img">
@@ -249,9 +290,12 @@
             </div>
             <div class="module-text">
               <h3>Mission Planning & Operations Calendar</h3>
-              <p>DroneLogbook allows you to plan missions, assign personnel and equipment and check airspace status in minutes.
-                We also provide an operations calendar so you can view your past and future fights in a single screen, providing
-                the information you need at your fingertips.</p>
+              <p>With DroneLogbook, mission planning is quick and intuitive. 
+                Assign pilots, aircraft, and equipment, review airspace conditions, 
+                and prepare missions with confidence. Our operations calendar provides 
+                a unified view of your previous flights and scheduled missions, 
+                ensuring you always have complete visibility into your UAV operations.
+              </p>
             </div>
           </div>
 
@@ -267,10 +311,13 @@
           <div class="flex-container reversed">
             <div class="module-text">
               <h3>Drone Inspections & Maintenance</h3>
-              <p>
-                Inspection module allows for building inspection schedules as recommended by manufacturer; and viewing fleet maintenance across all drones.
-                <br />Get notifications when inspection tasks needs to be done. Track Part Serial number, lifespan and replacement history.
-                <br />Manage all your drone and equipment maintenance actions.
+              <p>Our maintenance module helps you build accurate maintenance schedules allowing alignment 
+                with each manufacturer’s guidelines, while providing visibility into 
+                maintenance activity across your entire UAV fleet. Stay ahead of 
+                issues with automated notifications, and track every component—including 
+                serial numbers, usage lifespan, and replacement records.
+                <br />DroneLogbook makes it simple to manage all drone and equipment 
+                maintenance from a single, integrated system.
               </p>
             </div>
             <div class="module-img">
@@ -284,9 +331,14 @@
             </div>
             <div class="module-text">
               <h3>Personnel Dashboard</h3>
-              <p>DroneLogbook allows you to display detailed personnel dashboard.<br /><br />Manage and monitor pilot currency. Store and track documents (pilot, organization). Share information within the organization.
-                <br /><br />Manage personnel profiling with skills and capabilities tracking : Regulations, Operations, Business use cases and solutions.
-                <br />Compare skills across your organization and find the right pilot to a specific mission.
+              <p>With DroneLogbook’s personnel dashboard, you can efficiently manage 
+                pilot readiness, certifications, and documentation. 
+                Maintain up-to-date records for pilots and organizational requirements, 
+                while enabling seamless information sharing throughout your teams.
+                The platform supports advanced personnel profiling, allowing you to 
+                track skills, operational capabilities, regulatory knowledge, and mission-related 
+                experience. Easily compare pilot competencies to assign the best-qualified 
+                operator for any UAV mission.
               </p>
             </div>
           </div>
