--- a/solutions.html
+++ b/solutions.html
@@ -104,15 +104,17 @@
         <div class="column-left">
           <h1>DroneLogbook Solutions</h1>
           <h2 class="sub-header long">
-            DroneLogbook is actively working to provide industry specific solutions to help companies better manage their drone
-            operations. We recognize that different industries have different ways of operating and that we as a drone industry
-            software solutions provider need to provide different solutions to address the differing needs of education,
-            public safety, energy, construction, general commercial and others. As such we have created specially tailored
-            platforms to fit the needs of these industry sectors.
+            DroneLogbook provides customized solutions for a wide range of industries, 
+            helping organizations manage drone operations more efficiently. 
+            Because education, public safety, energy, construction, and commercial 
+            sectors all operate differently, our platform is designed to be scalable,
+            modular, and configurable—ensuring each industry receives the tools it needs.
           </h2>
-
           <h2 style="position: relative;" class="sub-header long">
-            DroneLogbook also offers a Private Label version (White Label) of our platform for those with more complex and/or larger scale drone operations. The platform is modular and configurable with a detailed administrative panel providing custom notifications and detailed operational oversight.
+            For large enterprises and complex UAV programs, we offer a Private 
+            Label (White Label) version of DroneLogbook. This enhanced platform 
+            includes a robust administrative panel, configurable workflows, and 
+            custom notification systems to support advanced operational requirements
             <div style="position: absolute; right: 0px; bottom: -65px;">
               <a style="font-size: 0.7em;" href="solutions.html#pl_version" class="ui-black">Learn More About Private Label Version</a>
             </div>
@@ -132,10 +134,15 @@
           </span>
           <div class="card-container">
             <div class="card-title">DroneLogbook For Commercial</div>
-            <div class="card-desc">DroneLogbook was created to help commercial UAV operators plan, manage and track their drone flight operations
-              to help maintain regulatory compliance and better manage their business. Our platform provides all the tools
-              needed to support the commercial drone operations. As the industry grows we continue to add new features and
-              integrate with partners to provide a seamless end to end fleet management and compliance solution.</div>
+            <div class="card-desc">
+              DroneLogbook empowers commercial drone operators to efficiently plan, 
+              organize, and monitor their flight activities while maintaining 
+              compliance with industry regulations. The platform offers comprehensive 
+              tools for mission planning, fleet management, documentation, and 
+              reporting. As commercial UAV use grows worldwide, we remain committed 
+              to adding new capabilities and partnering with industry leaders to 
+              provide a streamlined end-to-end operations and compliance ecosystem.
+            </div>
           </div>
         </div>
 
@@ -146,10 +153,15 @@
           <div class="card-container">
             <div class="card-title">DroneLogbook for Public Safety</div>
             <div class="card-link">www.safetydrone.org</div>
-            <div class="card-desc">This version of Dronelogbook is tailored to meet the technical needs and language of the public safety sector.
-              In addition, it is also priced to reflect the usage patterns and budget requirements of police, fire, EMS and
-              emergency planning departments. Our only requirement to use this site is you must use your official work emails
-              to sign up as it is meant just for 1st Responders.</div>
+            <div class="card-desc">
+              Designed for emergency services, DroneLogbook’s Public Safety 
+              Edition provides tools and terminology tailored to the needs of 
+              police, fire, EMS, and emergency planning teams. The platform’s 
+              pricing model reflects the operational tempo and budget realities 
+              of public safety organizations.
+              <br>For security and authenticity, only first responders 
+              registering with an official work email are granted access.
+            </div>
           </div>
         </a>
 
@@ -159,11 +171,15 @@
           </span>
           <div class="card-container">
             <div class="card-title">DroneLogbook for Education</div>
-            <div class="card-desc">If you are a drone training or educational institution with the need for a plan that allows you to rotate students
-              on and off quickly, then contact us about our education vertical. These plans are a version of our private
-              label platform designed to allow you to bring on students, train them, track their flights and then rotate
-              them off all within a fixed budget. This program is great solution for public and private drone / rpas/ uav
-              training courses, from four year colleges to union retraining programs.</div>
+            <div class="card-desc">
+              Created for high-turnover training environments, DroneLogbook’s 
+              education solution makes it easy to enroll students, deliver training, 
+              track their flights, and rotate them off the platform—all while staying 
+              within a fixed budget.
+              <br>It’s the perfect choice for drone, RPAS, and UAV training programs 
+              of all types, from four-year colleges to specialized workforce-retraining 
+              and upskilling courses.
+            </div>
           </div>
         </div>
 
@@ -172,8 +188,16 @@
             <img class="card-logo" src="img-min/solutions/commercial.jpeg" alt="Small Business Solution" loading="lazy">
           </span>
           <div class="card-container">
-            <div class="card-title">DroneLogbook for Delivery<br />(Part 135 / Part 91)</div>
-            <div class="card-desc">DroneLogbook is increasingly being engaged to deliver customized solutions for firms looking to engage in delivery and BVLOS operations. For these customers we offer customer development solutions to manage specific operational workflows, maintenance & inspection needs, and reporting requirements. Our development team works with the client’s operations team to deliver configurable and scalable solutions.</div>
+            <div class="card-title">DroneLogbook for Delivery<br />(Supporting delivery and BVLOS operations)</div>
+            <div class="card-desc">
+              DroneLogbook is increasingly partnering with organizations advancing drone delivery 
+              and BVLOS operations, providing tailored solutions to support their 
+              evolving needs. We deliver customized operational workflows, 
+              maintenance and inspection tools, and reporting features built 
+              specifically for complex delivery ecosystems.
+              <br>Our development team works directly with your operations group to create scalable, 
+              configurable solutions that match your unique mission requirements.
+            </div>
           </div>
         </div>
 
@@ -184,8 +208,14 @@
           <div class="card-container">
             <div class="card-title">DroneLogbook for Agriculture</div>
             <div class="card-link">www.dronelogbook.ag</div>
-            <div class="card-desc">DLB Ag Edition was developed with the FAA Part 137 UAV operator in mind and blends the power of DLB with the needs of the agricultural custom applicator.
-              DLB Ag Edition was developed with a specific workflow to ensure an accurate exchange of application information from the grower all the way to the Remote Pilot.</div>
+            <div class="card-desc">
+              The DLB Ag Edition supports agricultural drone operators globally, offering 
+              a workflow built for spray missions, crop treatments, and precision-ag 
+              applications. By integrating advanced DroneLogbook features with agriculture-specific 
+              processes, it ensures a reliable and accurate flow of application data 
+              from growers and agronomists directly to the Remote Pilot executing the 
+              mission.
+            </div>
           </div>
         </a>
 
@@ -195,11 +225,13 @@
           </span>
           <div class="card-container">
             <div class="card-title">DroneLogbook for Manufacturers</div>
-            <div class="card-desc">If you are a drone manufacturer, DroneLogbook can provide you with a private label platform to help you better
-              service your customers. With our customized offering, you can offer your customers an end to end uav fleet
-              management and logbook solution. This platform allows you to interact with your customers throughout the product
-              lifecycle ensuring a great customer experience while providing you with valuable insight regarding your UAV's
-              performance.
+            <div class="card-desc">IDrone manufacturers can leverage DroneLogbook’s private-label 
+              platform to provide customers with a seamless, branded UAV management 
+              and flight-logging solution. Our customizable system lets you deliver 
+              full fleet-management capabilities, ensuring continuous engagement 
+              throughout the product lifecycle. This gives your customers a superior 
+              experience while providing your team with actionable data and insights 
+              into aircraft performance and real-world operation.
             </div>
           </div>
         </div>
@@ -212,40 +244,48 @@
       <div class="row">
         <div class="page-wrapper">
           <div class="content-header">Private Label (White Label) Version </div>
-          <div class="content-sub-header">The DroneLogbook Private Label (White Label) platform is modular and configurable, dedicated cloud instance of our public drone operations compliance and drone fleet management software.</div>
+          <div class="content-sub-header">For organizations that require complete control and customization, 
+            the DroneLogbook Private Label platform provides a dedicated and fully 
+            branded cloud environment. Built for scale, it enhances operational 
+            oversight, simplifies compliance, and aligns seamlessly with your internal 
+            workflows.
+          </div>
           <div class="divider"></div>
 
           <div class="flex-container" style="align-items: baseline;">
 
             <div class="module-text" style="font-size: 16px; font-weight: 200; font-family: Roboto, sans-serif; color: #222;">
-              <b>The key features of this platform vs the public Dronelogbook.com site:</b><br />
-              <br /><b>Data Structure</b>
-              <li>Customizable data tables (Flight Types, Equipment, Drone Components)</li>
-              <li>Custom Forms and Templates: <br />
-                &nbsp;&nbsp;&nbsp;&nbsp;- Drone Inspection<br />
-                &nbsp;&nbsp;&nbsp;&nbsp;- Mission Plan <br />
-                &nbsp;&nbsp;&nbsp;&nbsp;- Custom Reports (Access All Data Tables)<br />
-                &nbsp;&nbsp;&nbsp;&nbsp;- Custom Documents – Checklists, Form Builder, Risk Assessment
-              </li>
-              <br /><b>Operations</b>
-              <li>Ability to Silo users into separate organizations with master oversight. Can also share information between organizations if needed</li>
-              <li>Mission request: ability to have 3rd parties outline flight areas (while keeping your data hidden)</li>
-              <li>Ability to auto notify if events are triggered (flight, operations, compliance, personnel). Things like flight altitude, overdue inspections, pilot currency, etc</li>
-              <li>Configurable platform allowing users to maintain their workflows</li>
+              <b>What Makes This Platform Different</b><br />
+              <br /><b>Flexible Data Structure</b>
+
+              <li>Tailor flight types, equipment lists, and component tracking</li>
+              <li>Build custom inspection forms, mission plans, and operational documents</li>
+              <li>Generate advanced custom reports leveraging every data table</li>
+              <li>Create your own checklists, forms, and risk assessment templates</li>
+              
+              <br /><b>Operational Control</b>
+
+              <li>Organize users into separate divisions with centralized administrative oversight</li>
+              <li>Allow third parties to define mission areas while keeping your operational data secure</li>
+              <li>Receive automated notifications for maintenance, compliance, personnel, and operational triggers</li>
+              <li>Configure the platform to support your unique workflows</li>
             </div>
 
             <div class="module-text" style="font-size: 16px; font-weight: 200; font-family: Roboto, sans-serif; color: #222;">
-              <br /><br /><b>Administrative</b>
-              <li>Customer branding (colors/logo)</li>
-              <li>Private cloud storage infrastructure. On-demand specific region/country hosting available</li>
-              <li>Customizable (Custom programming available to modify platform for a fee)</li>
-              <li>Less expensive than our public server at scale</li>
+              <br><b>Administrative Benefits</b>
 
-              <br /><br />
-              <p>This platform is very attractive to those organizations with multiple offices/business lines that have a need to manage scaling operations. In addition, we offer a special version for Public Safety that is modified to accommodate their needs.
-                Special pricing is available for Public Safety, Government and Educational organizations.
-                <br /><br /><b>Sectors Currently Using Private Labels:</b><br />
-                Education – Energy – Government – Mining – Media – Public Safety – Agriculture – Asset Owners (Transportation, Telco).
+              <li>Apply your branding to create a seamless user experience</li>
+              <li>Utilize dedicated cloud hosting, including region-specific options</li>
+              <li>Access custom development services for unique operational needs</li>
+              <li>Achieve significant cost savings at scale</li>
+
+              <br><b>Designed for Complex, Growing Operations</b>
+              <p>Ideal for enterprises with multiple locations or diverse business lines, 
+                the Private Label platform offers full customization and scalability.
+                 A dedicated Public Safety version is available, along with discounted 
+                 pricing for Government, First Responders, and Educational institutions.
+                <br><b>Current Sectors Leveraging Private Label:</b><br />
+                Education • Energy • Government • Mining • Media • Public Safety • Agriculture • Transportation • Telecom
                 <br /><br />
                 <a href="contact.php" class="ui-black">CONTACT US FOR MORE INFORMATION</a>
               </p>
